# log

log/: CMakeLists.txt  GENERATE_DEB.sh
xyz_log/: CMakeLists.txt  README.md  package.xml
xyz_log/include/: xyz_log.hpp
xyz_log/spdlog/: CMakeLists.txt
xyz_log/src/: logging.cpp
xyz_log/test/: simple_test.cpp
